Add dysk driver for Azure disks

--- a/config
+++ b/config
@@ -1421,6 +1421,7 @@ CONFIG_VIRTIO_BLK=m
 CONFIG_VIRTIO_BLK_SCSI=y
 CONFIG_BLK_DEV_RBD=m
 # CONFIG_BLK_DEV_RSXX is not set
+CONFIG_BLK_DEV_DYSK=m
 # CONFIG_BLK_DEV_NVME is not set
 # CONFIG_NVME_FC is not set
 # CONFIG_NVME_TARGET is not set
