--- a/config
+++ b/config
@@ -1809,8 +1809,8 @@ CONFIG_DUMMY=m
 # CONFIG_NET_FC is not set
 # CONFIG_IFB is not set
 # CONFIG_NET_TEAM is not set
-CONFIG_MACVLAN=m
-CONFIG_MACVTAP=m
+CONFIG_MACVLAN=y
+CONFIG_MACVTAP=y
 CONFIG_VXLAN=m
 # CONFIG_GENEVE is not set
 # CONFIG_GTP is not set
@@ -1819,8 +1819,8 @@ CONFIG_NETCONSOLE=m
 CONFIG_NETCONSOLE_DYNAMIC=y
 CONFIG_NETPOLL=y
 CONFIG_NET_POLL_CONTROLLER=y
-CONFIG_TUN=m
-CONFIG_TAP=m
+CONFIG_TUN=y
+CONFIG_TAP=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=m
@@ -4188,9 +4188,9 @@ CONFIG_KVM=y
 CONFIG_KVM_INTEL=y
 # CONFIG_KVM_AMD is not set
 # CONFIG_KVM_MMU_AUDIT is not set
-CONFIG_VHOST_NET=m
+CONFIG_VHOST_NET=y
 CONFIG_VHOST_VSOCK=m
-CONFIG_VHOST=m
+CONFIG_VHOST=y
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_BINARY_PRINTF=y
 
