--- a/config
+++ b/config
@@ -4211,7 +4211,10 @@ CONFIG_BINARY_PRINTF=y
 # RAID 6
 #
 CONFIG_RAID6_PQ=m
-# CONFIG_RAID6_FORCE_ALGO is not set
+CONFIG_RAID6_FORCE_ALGO=y
+# CONFIG_RAID6_FORCE_INT is not set
+# CONFIG_RAID6_FORCE_SSSE3 is not set
+CONFIG_RAID6_FORCE_AVX2=y
 CONFIG_BITREVERSE=y
 CONFIG_RATIONAL=y
 CONFIG_GENERIC_STRNCPY_FROM_USER=y
